5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1637_1054.log
== TEST (2019-04-09 10:24:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("coordenada x: "))
y = float(input("coordenada y: "))
reta = (2*x + y)

if(reta == 3):
	mensagem : "ponto pertence a reta"
		
else:
	mensagem : "ponto nao pertence a reta"
		
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:26:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("coordenada x: "))
y = float(input("coordenada y: "))
reta = (2*x + y)

if(reta == 3):
	mensagem : "ponto pertence a reta"
		
else:
	mensagem : "ponto nao pertence a reta"
		
print(mensagem.lower())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(mensagem.lower())
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:26:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("coordenada x: "))
y = float(input("coordenada y: "))
reta = (2*x + y)

if(reta == 3):
	mensagem = "ponto pertence a reta"
		
else:
	mensagem = "ponto nao pertence a reta"
		
print(mensagem.lower())

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:26:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("coordenada x: "))
y = float(input("coordenada y: "))
reta = (2*x + y)

if(reta == 3):
	mensagem = "ponto pertence a reta"
		
else:
	mensagem = "ponto nao pertence a reta"
		
print(mensagem.lower())

-- EXECUTION TIME:
0.185198
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
